[package]
name = "gba_env"
description = "Crate for detecting the environment for GameBoy Advance ROMs (GBA/NDS/mGBA/VBA/gpSP/etc)"
version = "1.0.0"
authors = ["Anatolij Vasilev <tolik518>"]
license = "GNU GPLv3 or MIT or Apache-2.0"
repository = "https://github.com/tolik518/gba_env"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# None

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = false

[workspace]
exclude = ["examples"]