[package]
name = "gba_env"
description = "Crate for detecting the environment for GameBoy Advance ROMs (GBA/NDS/mGBA/VBA/gpSP/etc)"
version = "1.1.0"
authors = ["Anatolij Vasilev <tolik518>"]
license = "GPL-3.0 OR MIT OR Apache-2.0"
categories = ["no-std", "embedded", "game-development"]
keywords = ["gba", "agb", "gameboy-advance"]
exclude = ["examples"]
repository = "https://github.com/tolik518/gba_env"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# None

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = false
